Amarok ChangeLog
================
(C) 2002-2010 the Amarok authors.

VERSION 2.3.2
  FEATURES:

  CHANGES:
    * Use system date/time format for default name when saving user playlists.

  BUGFIXES:
    * Fix failure when fetching cddb info for audio CDs in localized Amarok.
    * Fix expanding items in collection browser by double-click, in
      double-click mode.
    * Fix crash when adding new folders repeatedly in podcast/saved playlist
      browsers.
    * Fix context menu actions acting on wrong indices in the playlist browser.
    * Fix incorrect text about "rpath" argument to collection scanner.
      (BR 236076)


VERSION 2.3.2-Beta 1
  FEATURES:
    * Podcasts can now be filtered on provider and grouped in folders. (BR 219519)
    * Amarok 1.4 Database Importer: added support for importing labels.
      Thanks to Matěj Laitl for the patch. (BR 218996)
    * Shortcuts: Added "Replay current track" shortcut. (BR 217081)
    * Edit filter dialog: added "added" and "last played" date filters.
    * File browser: added forward and back buttons for accessing navigate history.
    * Organize Dialog: added a way to save multiple file formats as presets. (BR 122672)
    * Filtering: added default presets to the drop down menu of the collection
      search widget.
    * Filtering: track format can now be used as filter keyword in the
      collection browser, e.g. "format:flac".
    * Filtering: track file size can now be used as filter keyword in the
      collection browser, e.g. "filesize:<12" for tracks under 12Mb;
      "filesize:25" for tracks that are between 25 and 26Mb.
    * Filtering: tracks that were added to the collection since/before a
      certain time can now be filtered using, e.g. "added:<1w".
    * Filtering: added ability to filter last played date in the collection
      browser, e.g. "played:<3d".

  CHANGES:
    * Let scripts access bpm property of tracks (read-only). (BR 245257)